fixed text placeholder issue and coordinates error while dragging on overlapping objects

--- a/frontend/flowsheet-ui/src/app/globals.css
+++ b/frontend/flowsheet-ui/src/app/globals.css
@@ -20,6 +20,7 @@ body {
 
 }
 
-.placeholder-style:empty:not(:focus):before {
-  content: attr(data-placeholder)
+.placeholder-style:after {
+  content: attr(data-placeholder);
+  color: rgb(158, 155, 155);
 }
